hard-gists/6b93a8028f4dc40cab49/run.log
=== Docker Run Log for 6b93a8028f4dc40cab49 ===
Started at: Mi 29. Okt 16:48:59 CET 2025

[2025-10-29 16:49:00] START: Running container for 6b93a8028f4dc40cab49
[2025-10-29 16:49:00] SUCCESS: Container 8285355b14368810d00899b58a9f96eedc534e20e3ae5954cfa69e11cbe6fa8d started for 6b93a8028f4dc40cab49
=== Container logs for 6b93a8028f4dc40cab49 ===
  File "/snippet.py", line 52
    print evaluate_logloss(m, tr, va)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6b93a8028f4dc40cab49 ===
[2025-10-29 16:49:02] INFO: Container 8285355b14368810d00899b58a9f96eedc534e20e3ae5954cfa69e11cbe6fa8d has stopped
